--- a/templates/includes/modax.haml
+++ b/templates/includes/modax.haml
@@ -9,8 +9,9 @@
       {{ errors }}  
 
   %form(method="POST")
+    -csrf_token
     -block fields
       -for field in form.fields
         -render_field field
     .hidden
-        %input(type="submit" value="{{submit_button_name}}")
+      %input(type="submit" value="{{submit_button_name}}")
