--- a/templates/orgs/dependency_delete_modal.haml
+++ b/templates/orgs/dependency_delete_modal.haml
@@ -25,5 +25,5 @@
     -trans "There is no way to undo this. Are you sure?"
   .hidden
     %form(method="POST")
-      {% csrf_token %}
+      -csrf_token
       %input(type="submit" value="{{ submit_button_name }}")
